--- a/threshold/web/index.html
+++ b/threshold/web/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
@@ -10,13 +11,15 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="threshold">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
+  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="/favicon.ico" type="image/x-icon">
 
   <!-- Favicon -->
-  <link rel="shortcut icon" type="image/png" href="favicon.png"/>
 
   <title>threshold</title>
   <link rel="manifest" href="manifest.json">
 </head>
+
 <body id="app-container">
   <!-- This script installs service_worker.js to provide PWA functionality to
        application. For more information, see:
@@ -30,4 +33,5 @@
   </script>
   <script src="main.dart.js" type="application/javascript"></script>
 </body>
+
 </html>
